--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc422f3e1d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f97b8341490&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc423596ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc423596cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f97b83e0c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f97b83e0e50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc4237e9410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc4237e9610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f97b862f510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f97b862f710&gt;]</pre>
 </div>
 
 </div>
