--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd6a90e2450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f48741a81d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6a8e13b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd6a8e13d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4874814ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4874814cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6a93d4450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd6a93d4650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4874a553d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4874a555d0&gt;]</pre>
 </div>
 
 </div>
