--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f612ccab410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f90aff45490&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f612cd42b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f612cd42d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f90af462ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f90af462cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f612cf94490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f612cf94690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f90af6c9450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f90af6c9650&gt;]</pre>
 </div>
 
 </div>
