--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3210a7e510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff1f8d06990&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3210416910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3210416b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1f8d6ca50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff1f8d6cc50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f32109c2250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f32109c2490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1f8fd53d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff1f8fd55d0&gt;]</pre>
 </div>
 
 </div>
