--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1e8a46b7d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fef5f34f9d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1e8aabe050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1e8aad7cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fef5f07aa50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fef5f07ac50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1e8ad7b910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1e8ad165d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fef5f2bb290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fef5f2bb490&gt;]</pre>
 </div>
 
 </div>
