--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fef5f34f9d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa3fd09c510&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fef5f07aa50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fef5f07ac50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa3fc5cab90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa3fc5cad90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fef5f2bb290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fef5f2bb490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa3fc81c490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa3fc81c690&gt;]</pre>
 </div>
 
 </div>
