--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbfd2696750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0149cbf090&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbfd1bc5c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbfd1bc5e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f01491d5a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f01491d5c90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbfd1e15590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbfd1e15790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f014943e350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f014943e550&gt;]</pre>
 </div>
 
 </div>
