--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f37b48f7b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7057302cd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f37b4f4fbd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f37b4f4fdd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f705736e990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f705736ebd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f37b51a34d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f37b51a36d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f70575c1310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f70575c1550&gt;]</pre>
 </div>
 
 </div>
