--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe1a6a2da50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f42cacc2250&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe1a5f728d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe1a5903350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f42c9e99a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f42c9e99c50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe1a61b2290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe1a5c2d210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f42ca448290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f42ca448490&gt;]</pre>
 </div>
 
 </div>
