--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f32e085ab10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f45bc795490&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f32e05d8a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f32e05d8c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f45bc7f6ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f45bc7f6cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f32e0b32350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f32e0b32550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f45bca60390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f45bca60590&gt;]</pre>
 </div>
 
 </div>
