--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe344b8dbd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb596e9e6d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe344c2ec10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe344c2edd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb596f2db50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb596f2dd50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe344e82490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe344e82650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb597192490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb597192690&gt;]</pre>
 </div>
 
 </div>
