--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7eb071dd50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa7be1b8990&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7eb0aa3990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7eb0aa3b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa7be4b9b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa7be4b9d50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7eb0d0d2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7eb0d0d4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa7bea63490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa7bea63690&gt;]</pre>
 </div>
 
 </div>
