--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f824fa6e910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd5a6aa6d10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f824f75aa90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f824f75acd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd5a67bac50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd5a67bae50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f824f9c23d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f824f9c2610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd5a6d88590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd5a6d88790&gt;]</pre>
 </div>
 
 </div>
