--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7a3de3d850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f52d51b0790&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a3e756d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7a3e756f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f52d5805bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f52d5805dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a3e9ac610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7a3e9ac850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f52d5a5b450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f52d5a5b650&gt;]</pre>
 </div>
 
 </div>
