--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f16a50f0190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5af1d86250&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f16a460ab50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f16a460ad50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5af0e73a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5af0e73c90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f16a48bba50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f16a48726d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5af1425450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5af1425650&gt;]</pre>
 </div>
 
 </div>
