--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f615ba76d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0244eaa390&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f615ac4ba10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f615ac4bc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0243cb5ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0243cb5cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f615b1f6350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f615b1f6550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f024454a410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f024454a610&gt;]</pre>
 </div>
 
 </div>
