--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7bf91ce650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd4363c7210&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7bf9221b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7bf9221d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd4354ada90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd4354adc90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7bf94d02d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7bf94876d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd435a6b3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd435a6b5d0&gt;]</pre>
 </div>
 
 </div>
