--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2cf7c6ec10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4db2be00d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2cf795aad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2cf795acd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4db211fa10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4db211fc10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2cf7bc2490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2cf7bc2690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4db2360310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4db2360510&gt;]</pre>
 </div>
 
 </div>
