--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f894e5b2250&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb32eb3de10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f894ebc8d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f894ebc4d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb32ebc1ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb32ebc1d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f894ee23110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f894ee2d610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb32ee770d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb32ee2b590&gt;]</pre>
 </div>
 
 </div>
